succesfull collision with two pads

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Paddles.cpp" />
+    <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="SpriteCodex.cpp" />
     <ClCompile Include="Vec2.cpp" />
